--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "AppSettings": {
+        "BitstampWSUrl": "wss://ws.bitstamp.net",
+        "FrontendAppUrl": "http://localhost:5173"
     }
-  },
-  "AllowedHosts": "*"
 }
