--- a/application/tsconfig.json
+++ b/application/tsconfig.json
@@ -1,23 +1,18 @@
 {
-    "extends": "@vue/tsconfig/tsconfig.json",
-    "include": [
-        "env.d.ts",
-        "src/**/*",
-        "src/**/*.vue"
-    ],
-    "exclude": [
-        "dist",
-        "node_modules"
-    ],
-    "compilerOptions": {
-        "composite": true,
-        "module": "ESNext",
-        "moduleResolution": "Node",
-        "baseUrl": ".",
-        "paths": {
-            "@/*": [
-                "src/*"
-            ]
-        }
+  // https://nuxt.com/docs/guide/concepts/typescript
+  "files": [],
+  "references": [
+    {
+      "path": "./.nuxt/tsconfig.app.json"
+    },
+    {
+      "path": "./.nuxt/tsconfig.server.json"
+    },
+    {
+      "path": "./.nuxt/tsconfig.shared.json"
+    },
+    {
+      "path": "./.nuxt/tsconfig.node.json"
     }
+  ]
 }
