--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,28 @@ packages/
 # Resharper
 *.DotSettings
 *.DotSettings.user
+
+# Nuxt dev/build outputs
+.output
+.data
+.nuxt
+.nitro
+.cache
+dist
+
+# Node dependencies
+node_modules
+
+# Logs
+logs
+*.log
+
+# Misc
+.DS_Store
+.fleet
+.idea
+
+# Local env files
+.env
+.env.*
+!.env.example
