--- a/application/package.json
+++ b/application/package.json
@@ -1,44 +1,27 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.12",
-    "d3": "^7.9.0",
-    "tailwindcss": "^4.1.12",
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.31.0",
-    "@types/d3": "^7.4.3",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vitejs/plugin-vue-jsx": "^5.0.1",
-    "@vitest/eslint-plugin": "^1.3.4",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.8.1",
-    "eslint": "^9.31.0",
-    "eslint-plugin-vue": "~10.3.0",
-    "globals": "^16.3.0",
-    "jsdom": "^26.1.0",
-    "prettier": "3.6.2",
-    "typescript": "^5.9.2",
-    "vite": "^7.0.6",
-    "vite-plugin-vue-devtools": "^8.0.0",
-    "vitest": "^3.2.4",
-    "vue-tsc": "^3.0.6"
-  }
+    "name": "nuxt-app",
+    "type": "module",
+    "private": true,
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare"
+    },
+    "dependencies": {
+        "@nuxt/eslint": "^1.9.0",
+        "@nuxt/test-utils": "^3.19.2",
+        "@tailwindcss/vite": "^4.1.12",
+        "d3": "^7.9.0",
+        "eslint": "^9.34.0",
+        "nuxt": "^4.0.3",
+        "tailwindcss": "^4.1.12",
+        "vue": "^3.5.20",
+        "vue-router": "^4.5.1"
+    },
+    "devDependencies": {
+        "@types/d3": "^7.4.3",
+        "@vitejs/plugin-vue": "^6.0.1"
+    }
 }
